[tool.poetry]
name = "onefeed"
version = "0.1.0"
description = "a simples social network with one news feed and all"
authors = ["Mike <amaglichc@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
SQLAlchemy = "^2.0.29"
alembic = "^1.13.1"
uvicorn = "^0.29.0"
bcrypt = "^4.1.2"
PyJWT = {extras = ["crypto"], version = "^2.8.0"}
python-dotenv = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.7.1"}
python-multipart = "^0.0.9"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
